<resources>
    <string name="app_name">BabySitBook</string>
    <string name="babysitter">Babysitter</string>
    <string name="parent">Parent</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="age">Age</string>
    <string name="kids">Kids to babysitting</string>
    <string name="search">Search profiles</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_chat">Chat</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="calender">Calender</string>
    <string name="profile_picture">Profile picture</string>
    <string name="description">Description</string>
    <string name="children">Children</string>
    <string name="gender">Gender</string>
    <string name="num">Num</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="ADD_EVENT">addEvent</string>
    <string name="EVENTS">Events</string>
    <string name="BACK">Back</string>
    <string name="BUTTON">Button</string>
    <string name="TITLE">Title</string>
    <string name="DATE">Date</string>
    <string name="START_TIME">Start Time</string>
    <string name="END_TIME">End Time</string>
    <string name="DETAILS">Details</string>
    <string name="SAVE">Save</string>
    <string name="NOT_AVAILABLE">Not available</string>
    <string name="ALL_DAY">All day</string>
    <string name="TIME">Time</string>
    <string name="EDIT">Edit</string>
    <string name="DELETE">Delete</string>
    <string name="re_password">re-Password</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account_yet">Don\'t have account yet?</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="add_friend">Add friend</string>
    <string name="pending">Pending</string>

    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="calendar">Calendar</string>
    <string name="event_details">Event Details</string>
    <string name="edit_event">Edit Event</string>
    <string name="last_message">Last Message</string>
    <string name="contact_name">Contact Name</string>
    <string name="notifications">Notifications</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_description">Notification Description</string>
    <string name="contact_image">Contact Image</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="ignore">Ignore</string>
    <string name="post">Post</string>
    <string name="say_something">Say something...</string>
    <string name="username">Username</string>
    <string name="post_content">Post content</string>
    <string name="delete_post">Delete Post</string>
    <string name="place_holder_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="charge">Charge</string>
    <string name="choose_user_to_charge">Choose User to Charge</string>
    <string name="billing_history">Billing History</string>
    <string name="billings">Billings</string>
    <string name="city">City</string>
    <string name="experience">Experience</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="name">Name</string>
    <string name="send_message">Send Message</string>
    <string name="babysitter2">Babysitter,</string>
    <string name="babysitter3">"Babysitter,  "</string>
    <string name="mobility">Mobility</string>
    <string name="reviews">Reviews</string>
    <string name="birth_date">Birth Date</string>
    <string name="number_of_children">Number of Children</string>
    <string name="parent2">Parent,</string>
    <string name="bills">Bills</string>
    <string name="total_sum">Total Sum</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_button">Calculate Button</string>
    <string name="babysitbook_logo">Babysitbook Logo</string>
    <string name="paid">Paid</string>
    <string name="total_time">Total Time</string>
    <string name="debtor">Debtor</string>
    <string name="who_are_you">Who are you?</string>
    <string name="submit">Submit</string>
    <string-array name="user_kind">
        <item name="UserType"> User Type </item>
        <item name="Babysitter"> Babysitter </item>
        <item name="Parent"> Parent </item>
    </string-array>
    <string-array name="gender">
        <item name="Gender"> Gender * </item>
        <item name="Male"> Male </item>
        <item name="Female"> Female </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="applyBtn">apply</string>
    <string name="notification">Notification</string>
    <string name="add_chat">Add Chat</string>
    <string-array name="mobility">
        <item name="Mobility"> Mobility * </item>
        <item name="yes"> Yes </item>
        <item name="no"> No </item>
    </string-array>
    <string name="title_activity_choose_from_friends">ChooseFromFriends</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name">ChatNotification</string>
    <string name="channel_description">New Message</string>
</resources>