<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/chat_icon"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/favorite_icon"
        android:title="@string/notifications" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/calendar_icon"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

</menu>