<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24_black"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/FragmentBills"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/bills"/>

    <item
        android:id="@+id/mi_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        android:onClick="logout"/>

    <item
        android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/editProfile"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/edit_profile"/>

        </menu>

    </item>
</menu>