<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/deck_background">

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/DATE"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/START_TIME"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/END_TIME"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/calculate_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_calculate_24"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/calculate_button"/>
        </LinearLayout>

        <EditText
            android:id="@+id/total_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/total_sum"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:text=""
            android:autofillHints="Total Sum"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/choose_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/choose_user_to_charge"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:id="@+id/charge_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/reset_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/charge_button"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/openBillingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_margin="15dp" />

            <Button
                android:id="@+id/history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/billing_history"
                android:layout_gravity="center"/>
    </LinearLayout>
</layout>