<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clear_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/TITLE"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextStartTime"
            android:ems="10"
            android:hint="@string/DATE"
            android:inputType="date"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextEndTime"
            android:ems="10"
            android:hint="@string/START_TIME"
            android:inputType="time"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editTextStartTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/details"
            android:ems="10"
            android:hint="@string/END_TIME"
            android:inputType="time"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NOT_AVAILABLE"
            app:layout_constraintBottom_toTopOf="@+id/details"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/switch2"
            app:layout_constraintTop_toBottomOf="@+id/editTextEndTime"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ALL_DAY"
            app:layout_constraintTop_toBottomOf="@+id/editTextEndTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/switch1"
            app:layout_constraintBottom_toTopOf="@+id/details"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <TextView
            android:id="@+id/details"
            android:layout_width="336dp"
            android:layout_height="116dp"
            android:text="@string/DETAILS"
            app:layout_constraintTop_toBottomOf="@id/editTextEndTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonSave"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SAVE"
            app:layout_constraintTop_toBottomOf="@+id/details"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>